
----------------------------------------------------------------------
 2.4.1
----------------------------------------------------------------------

 - Updated translations (ca, eu, it, mk).
 - Fixed custom marker-line color not reloading.
 - Brought back the "Connect to selected server only" option in the
   Serverlist edit window (like "Cycle until connected" in 2.0.x).
 - 
 - 

CHECKIN: ca.po, mk.po


----------------------------------------------------------------------
 2.4.0
----------------------------------------------------------------------

 - Updated translations (ca, de, eu, it, ko, lt, nl, sk, sr, zh_CN).
 - Fixed a possible crash in loading pevents.conf.
 - Made default URL handlers work with Firefox 0.9.x by adding the
   "-a firefox" argument.
 - Plugin API: Added xchat_get_info field "libdirfs".
 - Fixed crash when trying to dcc send a filename which has encoding
   that doesn't match G_FILENAME_ENCODING.


----------------------------------------------------------------------
 2.1.1
----------------------------------------------------------------------

 - Updated translations (de, kr, lt, sk, sr, zh_CN).
 - Added some rudimentary support for the IDENTIFY-MSG feature.
 - Perl: Added Xchat::context_info (Lian Situ).
 - TCL: Added support for time fields in getlist (Daniel P.Stasinski).
 - Added "Open Dialog" event, so you can add a sound-file to it.
 - The standard beep can now be overridden with a sound-file.
 - Fixed tab-nick-completion's cycling behaviour.
 - New keyboard shortcut for line up and down (shift-arrow up/down).
 - Fixed: [986958] tab completion with GTK Input-Methods.


----------------------------------------------------------------------
 2.1.0
----------------------------------------------------------------------

 - Updated translations (eu).
 - Tab nick completion fixes: Crash with space-tab and glib critical
   warning (Ian Kumlien).
 - Heavily reworked the Preferences window. It should be alot clearer