@@ -10,10 +10,11 @@
  - Fixed custom marker-line color not reloading.
  - Brought back the "Connect to selected server only" option in the
    Serverlist edit window (like "Cycle until connected" in 2.0.x).
+ - You can now move networks and servers via Shift+Up/Down (in the
+   ServerList window).
  - 
  - 
-
-CHECKIN: ca.po, mk.po
+ - 
 
 
 ----------------------------------------------------------------------
